sample client-side logging for check-in

--- a/dylensmith-web/index.html
+++ b/dylensmith-web/index.html
@@ -10,6 +10,9 @@
 		<!-- #region - styles -->
 		<!-- #endregion -->
 		<!-- #region - scripts -->
+		<script>
+			console.log("ready");
+		</script>
 		<!-- #endregion -->
 	</head>
 
